# DialF

./: .gitignore  README.md  config.example.yaml
.github/workflows/: release.yml
app/: README.md  pubspec.yaml
app/android/: .gitignore
app/android/app/: build.gradle.kts  dialf-sideload.keystore
app/android/app/src/main/: AndroidManifest.xml
app/lib/: client.dart  main.dart  telecom.dart
app/test/: widget_test.dart
blog/: introducing-dialf.md
docs/: HARDWARE.md  PROTOCOL.md
npm/: README.md  install.js  package.json
scripts/: install.sh  release.sh
server/: Cargo.toml
server/crates/dialf/: Cargo.toml  build.rs
server/crates/dialf/src/: config.rs  daemon.rs  hub.rs  lib.rs  loopback.rs  main.rs  phone.rs  protocol.rs  registry.rs  service.rs
server/crates/dialf/src/audio/: backend.rs  command_backend.rs  engine.rs  mod.rs  record.rs  resample.rs  tool_detect.rs  vad.rs
server/crates/dialf/src/jobs/: mod.rs  runner.rs  schema.rs
server/crates/dialf/src/transport/: control_server.rs  discovery.rs  mod.rs  phone_server.rs
server/crates/dialf/tests/: audio_pipeline.rs
server/crates/ten-vad-sys/: Cargo.toml  build.rs
server/crates/ten-vad-sys/src/: lib.rs
server/crates/ten-vad-sys/tests/: smoke.rs
server/jobs/: blackhole.yaml  end-to-end-call.yaml  inbound-call.yaml  live-call-pilot.yaml  live-call.yaml  local-agent.yaml  outbound-call.yaml  record-only.yaml  sample.yaml
