[package]
name = "dialf"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "DialF — CLI + daemon to drive a mobile phone's calls via a control plane and a sound-card audio plane"

[[bin]]
name = "dialf"
path = "src/main.rs"

[lib]
name = "dialf"
path = "src/lib.rs"

[dependencies]
ten-vad-sys = { path = "../ten-vad-sys" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hound = { workspace = true }
which = { workspace = true }
chrono = "0.4"
phonenumber = "0.3"
