[package]
name = "ten-vad-sys"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Low-level FFI bindings to the ten-vad C library"
build = "build.rs"
# Declares the native lib so rpath dirs propagate to dependents via DEP_TEN_VAD_RPATH.
links = "ten_vad"

[dependencies]

[dev-dependencies]
hound = "3"

[build-dependencies]
cc = "1"
